# flood_analysis

./: .gitignore  bulk_process.py  extract_pdf.py  flood_db.duckdb  parse_json.py  pyproject.toml
Data/Archive/JSON/: water_level_1764184008.json  water_level_1764208836.json  water_level_1764218689.json  water_level_1764228381.json  water_level_1764249885.json  water_level_1764282598.json  water_level_1764294063.json  water_level_1764304411.json  water_level_1764314298.json  water_level_1764326082.json  water_level_1764346566.json  water_level_1764357341.json  water_level_1764369700.json  water_level_1764378360.json  water_level_1764390504.json  water_level_1764401735.json  water_level_1764410427.json  water_level_1764422591.json  water_level_1764433542.json  water_level_1764445162.json  water_level_1764454015.json  water_level_1764465089.json  water_level_1764476116.json  water_level_1764488650.json  water_level_1764499644.json  water_level_1764510255.json  water_level_1764519601.json  water_level_1764532453.json  water_level_1764542484.json  water_level_1764551454.json  water_level_1764562692.json  water_level_1764573566.json  water_level_1764583169.json  water_level_1764594498.json  water_level_1764604694.json  water_level_1764617676.json  water_level_1764627584.json  water_level_1764636975.json  water_level_1764649813.json  water_level_1764659440.json  (+18 more)
Logger/: init_logger.py
maps/: river_basinc.json
