[project]
name = "flood-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bs4>=0.0.2",
    "camelot-py[cv]",
    "duckdb>=1.4.2",
    "ipykernel>=6.29.5",
    "logging>=0.4.9.6",
    "pandas>=2.0.3",
    "polars>=1.35.2",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
    "ruff>=0.14.7",
]
